--- a/productDetails-lab3/src/main/resources/application.properties
+++ b/productDetails-lab3/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=9090
 #JPA Connection details
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=system
-spring.datasource.password=prameela
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=scott
+spring.datasource.password=tiger
 
 #Hibernate JPA Properties
 spring.jpa.hibernate.ddl-auto=update
