--- a/capg-movie-catelog/src/main/resources/application.properties
+++ b/capg-movie-catelog/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=movie-catelog-service
 server.port=8200
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=system    
-spring.datasource.password=prameela
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=scott	 
+spring.datasource.password=tiger
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jackson.serialization.fail-on-empty-beans=false
-
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
