--- a/capg-movie-catelog/src/main/resources/application.properties
+++ b/capg-movie-catelog/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.password=tiger
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jackson.serialization.fail-on-empty-beans=false
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
