--- a/student-rest-api/src/main/resources/application.properties
+++ b/student-rest-api/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=9090
 
 #DataSource Properties
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
-spring.datasource.username=system    
-spring.datasource.password=prameela
+spring.datasource.username=scott  
+spring.datasource.password=tiger
 
 #Hibernate Properties
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
